# abbs-meta-rs

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yml
apf/: Cargo.toml
apf/src/: lib.rs
apml/: Cargo.toml  README.md  spec.md
apml/src/: lib.rs
apml/src/apml/: error.rs  glob.rs  mod.rs  substitution.rs  variables.rs
apml/tests/: main.rs
dumper/: Cargo.toml
dumper/src/: main.rs
dumper/tools/verify/: autoverify.sh  verifier.py
libsolv-sys/: Cargo.toml  README.md  build.rs
libsolv-sys/src/: lib.rs
resolver/: Cargo.toml
resolver/src/: lib.rs  scc.rs
resolver/src/solv/: ffi.rs  mod.rs
solver/: Cargo.toml
solver/src/: deb.rs  pool.rs  types.rs  version.rs
src/: main.rs
src/apf/: error.rs  glob.rs  mod.rs  substitution.rs
tests/: main.rs
tree/: Cargo.toml  README.md
tree/examples/: print_tree.rs  tree_as_json.rs  tree_as_toml.rs
tree/src/: lib.rs  tree.rs
tree/src/package/: error.rs  fail_arch.rs  mod.rs  pkgsec.rs
tree/src/tree/: error.rs  mod.rs
