[package]
name = "abbs-meta"
version = "0.1.0"
authors = ["Leo Shen <i@szclsya.me>", "liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
conch-parser = { git = "https://github.com/liushuyu/conch-parser" }
regex = "1"
aho-corasick = "0.7"
annotate-snippets = { version = "0.9.0", features = ["color"] }

[dev-dependencies]
walkdir = "*"
