[package]
name = "abbs-meta-apml"
version = "0.1.0"
authors = ["Leo Shen <i@szclsya.me>", "liushuyu <liushuyu011@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
conch-parser = { git = "https://github.com/liushuyu/conch-parser", rev = "9fb470f4dcea6bb86fe64071ee5ae2121dbc4adf" }
regex = "1"
aho-corasick = "0.7"
annotate-snippets = { version = "0.9.0", features = ["color"] }

[dev-dependencies]
walkdir = "*"
