[package]
name = "abbs-meta-apml"
version = "0.1.0"
authors = ["Leo Shen <i@szclsya.me>", "liushuyu <liushuyu011@gmail.com>", "zrah <zrah@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
conch-parser = { git = "https://github.com/eatradish/conch-parser", rev = "99043086237afa78a6e02f084b241c7a65152dec" }
regex = "1"
aho-corasick = "1.1"
annotate-snippets = { version = "0.9.0", features = ["color"] }

[dev-dependencies]
walkdir = "*"
